[package]
name = "env-variables"
version = "0.1.1"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/env-variables"
homepage = "https://github.com/cssivision/env-variables"
description = "extract proxy env variables"
readme = "README.md"

[dependencies]
url = "1.5"

[dev-dependencies]
lazy_static = "0.2"
